--- a/src/components/home/header.astro
+++ b/src/components/home/header.astro
@@ -11,17 +11,16 @@ import headerImg from "../../assets/img/careHeader.jpg";
     class="relative z-10 flex flex-col items-center justify-center h-full text-center px-4"
   >
     <h1 class="text-4xl md:text-6xl font-bold text-green-700 mb-6">
-      Reliable Health Coverage
+      可靠的健康保障
     </h1>
     <p class="text-lg md:text-2xl text-white mb-8 max-w-2xl font-bold">
-      We provide guidance and solutions for health plans, taking care of your
-      health and well-being.
+      我们为健康计划提供指导与解决方案，用心守护您的健康与福祉。
     </p>
     <a
       href="/contact"
       class="px-6 py-3 bg-[#2F855A] hover:bg-green-800 text-white font-semibold rounded-3xl transition"
     >
-      Contact Us
+      联系我们
     </a>
   </main>
 </header>
