--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -4,7 +4,7 @@ import Footer from '../components/common/footer.astro';
 import "../styles/global.css";
 const title = Astro.props.title ?? "Legal Staff";
 ---
-<html lang="es">
+<html lang="zh">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
