--- a/src/components/home/header.astro
+++ b/src/components/home/header.astro
@@ -10,17 +10,17 @@ import headerImg from "../../assets/img/careHeader.jpg";
   <main
     class="relative z-10 flex flex-col items-center justify-center h-full text-center px-4"
   >
-    <h1 class="text-4xl md:text-6xl font-bold text-green-700 mb-6">
-      可靠的健康保障
+    <h1 class="text-4xl md:text-6xl font-bold text-pink-400 mb-6">
+      Dopi不脱妆粉底液
     </h1>
     <p class="text-lg md:text-2xl text-white mb-8 max-w-2xl font-bold">
-      我们为健康计划提供指导与解决方案，用心守护您的健康与福祉。
+      创新持妆科技，让您的妆容从早到晚持久完美，绽放自信光彩。
     </p>
     <a
       href="/contact"
-      class="px-6 py-3 bg-[#2F855A] hover:bg-green-800 text-white font-semibold rounded-3xl transition"
+      class="px-6 py-3 bg-gradient-to-r from-pink-500 to-rose-600 hover:from-pink-600 hover:to-rose-700 text-white font-semibold rounded-3xl transition"
     >
-      联系我们
+      立即购买
     </a>
   </main>
 </header>
