--- a/src/components/home/Empresas.astro
+++ b/src/components/home/Empresas.astro
@@ -5,24 +5,17 @@ import { empresas } from "../../data/empresasData.js";
 <section class="py-16 bg-gray-50">
   <div class="max-w-6xl mx-auto text-center px-6">
     <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-10">
-      值得信赖的公司
+      热销美妆
     </h2>
 
-    <div
-      class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-4 gap-10 justify-items-center items-center"
-    >
-      {
-        empresas.map((empresa) => (
-          <div class="flex font-bold items-center justify-center grayscale hover:grayscale-0 transition duration-300">
-            <img
-              src={empresa.logo}
-              alt={empresa.nombre}
-              class="h-14 md:h-16 object-contain rounded-4xl"
-              loading="lazy"
-            />
+    <div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-4 gap-10 justify-items-center items-center">
+      {empresas.map((empresa) => (
+        <div class="flex font-bold items-center justify-center grayscale hover:grayscale-0 transition duration-300">
+          <div class="text-4xl md:text-5xl">
+            {empresa.logo}
           </div>
-        ))
-      }
+        </div>
+      ))}
     </div>
   </div>
 </section>
